[package]
name = "payment_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
csv = "1.1.6"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
tinyset = "0.4.10"
tokio = { version = "1.18.2", features = ["full"] }
